fix theList to show banner images on tablet and mobile

--- a/client/views/layout.css
+++ b/client/views/layout.css
@@ -119,7 +119,7 @@ a:hover {
     height: 2.25em;
 }
 
-.ui.fluid.dimmable.image {
+.ui.dimmable.image {
     height: 130px;
 }
 
